Services and Networking/network-policies/networkPolicy_AllowAll.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-allowall
  namespace: test
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - {}
