Services and Networking/network-policies/networkPolicy_DenyAll.yaml
apiVersion: v1
kind: NetworkPolicy
metadata:
  name: policy-denyall
  namespace: test
spec:
  podSelector:
    {}
  policyTypes:
  - Ingress
  ingress:
    []
